--- a/Views/Inspect/AirIn_List.cshtml
+++ b/Views/Inspect/AirIn_List.cshtml
@@ -13,7 +13,7 @@
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'BUSIUNITNAME',sortable:true,">收货人</th>
-                    <th data-options="field:'TOTALNO',sortable:true">总单号11</th>
+                    <th data-options="field:'TOTALNO',sortable:true">总单号</th>
                     <th data-options="field:'DIVIDENO',sortable:true">分单号</th>
                     <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
                     <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
