--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -81,8 +81,8 @@
                 <li>
                     <a href="javascript:void(0)">退单管理</a>
                     <ul>
-                        <li><a href="#">退单管理</a></li>
-                        <li><a href="#">签收操作</a></li>
+                        <li><a href="/Retreatorder/BackOrder_List">退单管理</a></li>
+                        <li><a href="/Retreatorder/SignOrder_List">签收操作</a></li>
                     </ul>
                 </li>
                 <li>
