--- a/Views/Declare/LandIn_List.cshtml
+++ b/Views/Declare/LandIn_List.cshtml
@@ -1,14 +1,12 @@
-﻿<div class="ibox-content">
+﻿<script type="text/javascript">
+    $(function () {
+        loadListGrid('LandIn_Edit');
+    })
+</script>
+<div class="ibox-content">
     <div class="table-responsive"> 
         <table id="datagrid" class="easyui-datagrid" title="陆运进口" style="height:auto;min-height:500px;max-height:800px"
-               data-options=" rownumbers:true,
-                                   url: '/Order/GetData',
-                                   queryParams:{BUSITYPE:31},
-                                   dataType : 'json',
-                                   method:'get',
-                                   toolbar:'#tb',
-                                   pageSize:20,
-                                   pagination:true ">
+               data-options="queryParams:{BUSITYPE:31}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
@@ -131,15 +129,3 @@
 
     </div>
 </div>
-
-<script type="text/javascript">
-        //双击事件
-        $('#datagrid').datagrid({
-            onDblClickCell: function (index, field, value) {
-                var row = $('#datagrid').datagrid('getData').rows[index];
-                if (row.ID != "") {
-                    window.location.href = "/Declare/LandIn_Edit?ID=" + row.ID;
-                }
-            }
-        });
-</script>
