--- a/Views/Declare/LandOut_List.cshtml
+++ b/Views/Declare/LandOut_List.cshtml
@@ -1,14 +1,12 @@
-﻿<div class="ibox-content">
+﻿<script type="text/javascript">
+    $(function () {
+        loadListGrid('LandOut_Edit');
+    })
+</script>
+<div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" style="height:auto;min-height:500px;max-height:800px" title="陆运出口"
-               data-options=" rownumbers:true,
-                                   url: '/Order/GetData',
-                                   queryParams:{BUSITYPE:30},
-                                   dataType : 'json',
-                                   method:'get',
-                                   toolbar:'#tb',
-                                    pageSize:20,
-                                   pagination:true ">
+               data-options="queryParams:{BUSITYPE:30}">
 
             <thead data-options="frozen:true">
                 <tr>
@@ -131,15 +129,4 @@
         </div>
     </div>
 </div>
-
-<script type="text/javascript">
-        //双击事件
-        $('#datagrid').datagrid({
-            onDblClickCell: function (index, field, value) {
-                var row = $('#datagrid').datagrid('getData').rows[index];
-                if (row.ID != "") {
-                    window.location.href = "/Declare/LandOut_Edit?ID=" + row.ID;
-                }
-            }
-        });
-</script>
+ 
