报检操作 编辑页 css   js  优化

--- a/Views/Inspect/LandOut_Edit.cshtml
+++ b/Views/Inspect/LandOut_Edit.cshtml
@@ -1,56 +1,4 @@
-﻿
-<style type="text/css">
-    #OrderFrom {
-        margin: 10px 0px;
-    }
-
-        #OrderFrom table {
-            width: 100%;
-        }
-
-            #OrderFrom table tr {
-                height: 40px;
-            }
-
-                #OrderFrom table tr td {
-                    width: 25%;
-                }
-
-                    #OrderFrom table tr td label {
-                        width: 80px;
-                        text-align: right;
-                    }
-
-                    #OrderFrom table tr td .easyui-textbox {
-                        width: 200px;
-                    }
-
-                    #OrderFrom table tr td .easyui-numberspinner {
-                        width: 200px;
-                    }
-
-                    #OrderFrom table tr td .easyui-combobox {
-                        width: 200px;
-                    }
-
-    #scene .easyui-linkbutton {
-        margin-left: -5px;
-    }
-
-    #scene .l-btn-text {
-        line-height: 20px;
-    }
-
-    #scene .time_input {
-        width: 180px !important;
-    }
-
-    .panel-title {
-        color: #3071a9;
-    }
-</style>
-
-<form id="OrderFrom" method="post">
+﻿<form id="OrderFrom" method="post">
     <div id="" style="margin-bottom:20px" class="easyui-panel" title="订单主信息"
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
@@ -238,89 +186,7 @@
             </tr>
         </thead>
     </table>
-
-
-
-
 </div>
-
-
-
 <script type="text/javascript">
-    function submitForm() {
-
-        $('#OrderFrom ').form('submit', {
-            url: "/Order/SaveData",
-            onSubmit: function () {
-                if ($(this).form('enableValidation').form('validate')) {
-                    return true;
-                } else {
-                    return false;
-                }
-            },
-            success: function (data) {
-                debugger;
-                var data = eval('(' + data + ')');  // change the JSON string to javascript object
-                if (data.Success) {
-                    $.messager.alert('成功', '保存成功');
-                } else {
-                    $.messager.alert('失败', '保存失败');
-                }
-            }
-        });
-    }
-
-
-    var type;
-    $(function () {
-        function getQueryString(name) {
-            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-            var r = window.location.search.substr(1).match(reg);
-            if (r != null) return unescape(r[2]); return null;
-        }
-        var ID = getQueryString('ID');
-
-
-        function loadsucc(data) {
-            var PASSMODE = data['PASSMODE'];
-            if (PASSMODE != "") {
-                var arr = PASSMODE.split(',');
-                for (i = 0; i < arr.length; i++) {
-                    $('input[name=PASSMODE][value=' + arr[i] + ']')[0].checked = true;
-                }
-            }
-
-        }
-
-        $('#OrderFrom').form({ onLoadSuccess: loadsucc });
-        $('#OrderFrom').form('load', '/Order/Edit_Order?ID=' + ID);
-
-
-        $('.fillingData').click(function () {
-            type = this.getAttribute("datatype");
-            $.ajax({
-                url: '/Order/Edit_Ajax_Scene',// 跳转到 action
-                data: {
-                    'ID': ID,
-                    'type': type
-                },
-                type: 'post',
-                dataType: 'json',
-                success: function (data) {
-                    if (data.Success == true) {
-                        var time = "#" + type + 'TIME';
-                        var name = "#" + type + 'USERNAME';
-                        debugger;
-                        $(time).textbox('setValue', data.datetime);
-                        $(name).textbox('setValue', data.name);
-                    } else {
-                        $.messager.alert('异常', '联系管理员');
-                    }
-                },
-
-            });
-
-        });
-    })
-
+    Edit();
 </script>
