--- a/Views/Inspect/AirOut_List.cshtml
+++ b/Views/Inspect/AirOut_List.cshtml
@@ -12,7 +12,7 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field:'ID',width:80,checkbox:true">id</th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true">收货人</th>
+                    <th data-options="field:'text',sortable:true">发货人</th>
                     <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
                     <th data-options="field:'text',sortable:true">运输车号</th>
                 </tr>
