--- a/Views/Inspect/AirIn_List.cshtml
+++ b/Views/Inspect/AirIn_List.cshtml
@@ -1,14 +1,12 @@
-﻿ <div class="ibox-content">
+﻿<script type="text/javascript">
+    $(function () {
+        loadListGrid('Inspect/AirIn_Edit');
+    })
+</script> 
+<div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="空运进口" style="height:auto;min-height:500px;max-height:800px"
-               data-options=" rownumbers:true,
-                                   url: '/Order/GetData',
-                                   queryParams:{BUSITYPE:11},
-                                   dataType : 'json',
-                                   method:'get',
-                                   toolbar:'#tb',
-                                   pageSize:20,
-                                   pagination:true ">
+               data-options="queryParams:{BUSITYPE:11}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
@@ -122,15 +120,3 @@
     </div>
     <!-- end ibox-content -->
 </div>
-
-<script type="text/javascript">
-        //双击事件
-        $('#datagrid').datagrid({
-            onDblClickCell: function (index, field, value) {
-                var row = $('#datagrid').datagrid('getData').rows[index];
-                if (row.ID != "") {
-                    window.location.href = "/Inspect/AirIn_Edit?ID=" + row.ID;
-                }
-            }
-        });
-</script>
