关务操作优化

--- a/Views/Declare/AirOut_List.cshtml
+++ b/Views/Declare/AirOut_List.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/javascript">
     $(function () {
-        loadListGrid('AirOut_Edit');
+        loadListGrid('Declare/AirOut_Edit');
     })
 </script>
 <div class="ibox-content">
