--- a/Views/Declare/DomesticKnot_List.cshtml
+++ b/Views/Declare/DomesticKnot_List.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/javascript">
     $(function () {
-        loadListGrid('DomesticKnot_Edit');
+        loadListGrid('Declare/DomesticKnot_Edit');
     })
 </script>
 <div class="ibox-content">
