--- a/Views/Declare/LandOut_List.cshtml
+++ b/Views/Declare/LandOut_List.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/javascript">
     $(function () {
-        loadListGrid('LandOut_Edit');
+        loadListGrid('Declare/LandOut_Edit');
     })
 </script>
 <div class="ibox-content">
