--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/javascript">
     $(function () {
-        loadListGrid('SpecialSupervision_Edit');
+        loadListGrid('Declare/SpecialSupervision_Edit');
     })
 </script> 
 <div class="ibox-content">
