--- a/Views/Inspect/DomesticKnot_List.cshtml
+++ b/Views/Inspect/DomesticKnot_List.cshtml
@@ -11,51 +11,42 @@
                 <tr>
                     <th data-options="field: 'ck', checkbox: true"></th>
                     <th data-options="field:'CODE',sortable:true">业务编号</th>
+                    <th data-options="field:'text',sortable:true">报检编号</th>
+                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'text',sortable:true">报检单号</th>
+                    <th data-options="field:'text',sortable:true">业务种类</th>
+                    <th data-options="field:'CUSNO',sortable:true">收货人</th>
                     <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
-                    <th data-options="field:'text',sortable:true">关务状态</th>
-                    <th data-options="field:'text',sortable:true">业务类型</th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true">企业</th>
-                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
-                    @*<th data-options="field:'text',sortable:true">转入出类别</th>
-                    <th data-options="field:'BUSITYPE',sortable:true">进出口类别</th>
-                    <th data-options="field:'CORRESPONDNO',sortable:true">对应号</th>
-                    <th data-options="field:'text',sortable:true">出口业务方式</th>
-                    <th data-options="field:'text'">手册号</th>
-                    <th data-options="field:'text'">核销单号</th>*@
-                    <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
-                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
+                    <th data-options="field:'text',sortable:true">QP标志</th>
+                    <th data-options="field:'INOUTTYPE',sortable:true">进出口类别</th>
+                    <th data-options="field:'text',sortable:true">货物流向</th>
                     <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
                     <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
-                    <th data-options="field:'text',sortable:true">备注</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
+                    <th data-options="field:'text',sortable:true">法检标志</th>
+                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'INSPSTATUS',sortable:true">报检状态</th>
+                    <th data-options="field:'DECLSTATUS',sortable:true">报关状态</th>
+                    <th data-options="field:'ISINVALID',sortable:true">作废标志</th>
+                    <th data-options="field:'text',sortable:true">作废时间</th>
                     <th data-options="field:'text',sortable:true">OPS接单时间</th>
                     <th data-options="field:'text',sortable:true">OPS接单人</th>
-                    <th data-options="field:'text',sortable:true">关务接单时间</th>
-                    <th data-options="field:'text',sortable:true">关务接单人</th>
-                    <th data-options="field:'GUOJITIME',sortable:true">过机时间</th>
-                    <th data-options="field:'GUOJIUSERNAME',sortable:true">过机人</th>
-                    <th data-options="field:'LIDANTIME',sortable:true">理单时间</th>
-                    <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
-                    <th data-options="field:'LIHUOZILIAOTIME',sortable:true">理单资料时间</th>
-                    <th data-options="field:'LIHUOZILIAOUSERNAME',sortable:true">理单资料人</th>
-                    <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
-                    <th data-options="field:'BAOGUANUSERNAME',sortable:true">报关人</th>
-                    <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
-                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">申报关区</th>
-                    <th data-options="field:'text',sortable:true">打印状态</th>
-                    <th data-options="field:'text',sortable:true">报检状态</th>
-                    <th data-options="field:'text',sortable:true">关务编号</th>
-                    <th data-options="field:'text',sortable:true">急货标识</th>
-                    <th data-options="field:'text',sortable:true">出单日期</th>
-                    <th data-options="field:'text',sortable:true">报关方式</th>
-                    <th data-options="field:'text',sortable:true">海关通关状态</th>
-                    <th data-options="field:'text',sortable:true">签收号</th>
-                    <th data-options="field:'text',sortable:true">签收人</th>
-                    <th data-options="field:'text',sortable:true">签收日期</th>
-                    <th data-options="field:'text',sortable:true">报关资料齐全标志</th>
-                    <th data-options="field:'text',sortable:true">文档类别</th>
+                    <th data-options="field:'text',sortable:true">OPS接单备注</th>
+                    <th data-options="field:'text',sortable:true">报检接单时间</th>
+                    <th data-options="field:'text',sortable:true">报检接单人</th>
+                    <th data-options="field:'MOACCEPTTIME',sortable:true">制单时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">放行时间</th>
+                    <th data-options="field:'text',sortable:true">报检时间</th>
+                    <th data-options="field:'text',sortable:true">输机时间</th>
+                    <th data-options="field:'MOACCEPTUSERNAME',sortable:true">制单人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">放行人</th>
+                    <th data-options="field:'text',sortable:true">报检人</th>
+                    <th data-options="field:'text',sortable:true">输机人</th>
+                    @*<th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'text',sortable:true">报检单号</th>*@
+                    <th data-options="field:'CONTRACTNO',sortable:true">合同发票号</th>
+                    <th data-options="field:'text',sortable:true">异常登记</th>
+                    <th data-options="field:'text',sortable:true">异常回复</th>
                 </tr>
             </thead>
         </table>
