--- a/Views/Inspect/AirIn_List.cshtml
+++ b/Views/Inspect/AirIn_List.cshtml
@@ -14,7 +14,7 @@
                     <th data-options="field:'TOTALNO',sortable:true">总单号</th>
                     <th data-options="field:'DIVIDENO',sortable:true">分单号</th>
                     <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量1</th>
+                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
                 </tr>
             </thead>
             <thead>
