--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
                         <li><a href="/Inspect/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
                         <li><a href="/Inspect/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>
                         <li><a href="/Inspect/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内业务</a></li>
+                        <li><a href="/Inspect/OnelineIn_List"><i class="iconfont">&#xe60e;</i> 一线进口</a></li>
                     </ul>
                 </li>
                 <li>
