--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -133,13 +133,15 @@
                                 <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
                             </td>
 
+        
+
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>是否单证放行1</option>
+                                    <option>关区代码</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value is_check" panelheight="auto" name="is_clearance"></select>
+                                <select class="easyui-combobox combobox_width value " id="CUSTOMDISTRICTCODE" name="CUSTOMDISTRICTCODE"></select>
                             </td>
                         </tr>
 
